# synapse-mcp

./: .dockerignore  .gitignore  COMPLIANCE.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  fly.toml  pyproject.toml  pytest.ini  requirements-dev.txt  server.py  setup.py  test_croissant_server.py  test_synapse.py
.github/workflows/: ci.yml
doc/: usage.md
examples/: client_example.py  croissant_example.py
scripts/: dev_oauth.sh  smoke_redis_session_storage.py
src/synapse_mcp/: __init__.py  __main__.py  app.py  auth.py  auth_middleware.py  auth_server.py  connection_auth.py  context_helpers.py  pat_auth_manager.py  query.py  resources.py  server.py  tools.py  utils.py
src/synapse_mcp/entities/: __init__.py  base.py  croissant.py  dataset.py  file.py  folder.py  project.py  table.py
src/synapse_mcp/oauth/: __init__.py  client_registry.py  config.py  factory.py  jwt.py  proxy.py
src/synapse_mcp/session_storage/: __init__.py  base.py  memory.py  redis_backend.py
tests/: conftest.py  test_auth.py  test_auth_config.py  test_auth_middleware.py  test_client_registry.py  test_connection_auth.py  test_croissant.py  test_multi_user_isolation.py  test_oauth_jwt.py  test_oauth_proxy.py  test_package.py  test_resources.py  test_search_tool.py  test_server.py  test_session_storage.py  test_session_storage_memory.py  test_session_storage_redis.py
